# proving-ground

./: .gdbinit  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  Readme.md  ahrs-ekf-mag-cal.ipynb  ahrs-ekf-template.ipynb  build.rs  debug.txt  memory.64k  openocd.cfg  print-regs.py  rustfmt.toml  travis.sh
.cargo/: config  config.toml
ahrs/: Readme.md  main.rs
ahrs-ekf/: Readme.md  main.rs
altitude/: altitude.rs  main.rs
better-pwm/: Cargo.toml  Readme.md
better-pwm/src/: main.rs
better_pwm/: Readme.md  main.rs
better_pwm/.cargo/: config
bmp280/: Cargo.toml  Readme.md  bmp280.rs  main.rs
bmp280/src/: bmp280.rs  main.rs
bmp288/: Cargo.toml  Readme.md  memory.x
bmp288/src/: bmp280.rs  bmp288.rs  main.rs
calibrating_ahrs/: Readme.md  gen_ekf.py  main.rs
calibrating_ahrs/ekf/: gen_ekf.py  generated.rs  run.rs
calibration/: README.md  main.rs
cmd_dma/: Readme.md  main.rs
contrib/: debug.txt  feed.py  print-regs.py
cycle_sensors/: Readme.md  main.rs
dma_int/: Readme.md  main.rs
dma_serial/: README.md  main.rs
echo_dma/: Readme.md  main.rs
embassy_led/: main.rs
embassy_raw_sensors/: Readme.md  main.rs
feed/: Readme.md  main.rs
lsm303/: Readme.md  main.rs
lsm_mpu/: Readme.md  main.rs
mini/: Cargo.toml  Readme.md  main.rs
mini/src/: main.rs
motors/: Cargo.toml  Readme.md  main.rs
motors/src/: main.rs
mpu_calib/: Cargo.toml  Readme.md  main.rs
mpu_calib/src/: main.rs
mpu_int/: Readme.md  main.rs
nucled/: Readme.md  main.rs
pin_sensors/: Readme.md  main.rs
pwm/: Cargo.toml  main.rs
pwm/src/: main.rs
raw_sensors/: Cargo.toml  Readme.md  main.rs
raw_sensors/src/: main.rs
rtfm_int/: Readme.md  main.rs  mcr.rs
rtt_test/: main.rs
semi/: main.rs
semi_sensors/: Readme.md  main.rs
serial_echo/: Cargo.toml  Readme.md  main.rs
serial_redirect/: Readme.md  main.rs
shared_i2c/: Readme.md  main.rs
src/: main.rs
systick/: Readme.md  main.rs
therm/: Cargo.toml  Readme.md  main.rs
tmtest/: Cargo.toml  Readme.md  main.rs
tmtest/src/: main.rs
vl53l0x/: Cargo.toml  Readme.md  main.rs  vl53l0x.rs
vl53l0x/src/: main.rs  vl53l0x.rs
wonca/: README.md  logger.rs  main.rs  utils.rs
wonca/hw_layout/f3eva/: spi.rs  usart.rs
wonca/hw_layout/nucleo/: spi.rs  usart.rs
