cargo-features = ["rename-dependency"]

[package]
name = "proving_ground"
description = "Examples of tiny programs for stm32f30x MCUs"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = false
codegen-units = 1
incremental = false

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = false
lto = true
incremental = false # nalgebra

[dependencies]
panic-abort = {version = "0.3.1", optional=true}
cortex-m = {version = "0.5.7", optional=true, features = ["inline-asm", "const-fn"]}
cortex-m-rt = {version = "0.6.5", optional = true}
nb = {version = "0.1.1", optional = true}
stm32f30x = {version = "0.7.1", optional = true}
mpu9250 = {version = "0.7.3", optional = true}
# mpu9250 = {path = "../mpu9250", optional = true}
dcmimu = {version = "0.1.3", optional = true}
lsm303c = {version = "0.1.5", optional = true}
# lsm303c = {path = "../lsm303c", optional = true}
bmp280 = {version = "0.0.1", optional = true, package="bmp280-ehal"}
shared-bus = {version = "0.1.2", optional = true, features = ["cortexm"]}
vl53l0x = {git = "https://github.com/copterust/vl53l0x", optional = true}
# vl53l0x = {path = "../vl53l0x", optional = true}
nalgebra = {version = "0.16.4", optional = true, default-features = false}
libm = {version = "0.1.2", optional = true}
rand = {version = "0.5.5", optional = true}

[dependencies.ehal]
features = ["unproven"]
version = "0.2.1"
package = "embedded-hal"
optional = true

[dependencies.hal]
version = "0.9.1"
package = "alt-stm32f30x-hal"
optional = true

[features]
no_device = ["panic-abort", "cortex-m-rt", "cortex-m"]
with_device = ["panic-abort", "cortex-m-rt", "cortex-m", "stm32f30x/rt"]
with_hal = ["with_device", "nb", "ehal", "hal"]
with_mpu = ["with_hal", "mpu9250"]
with_dcmimu = ["with_mpu", "dcmimu"]
with_lsm = ["with_hal", "lsm303c"]
with_bmp = ["with_hal", "bmp280"]
with_shared_bus = ["with_hal", "shared-bus"]
with_vl53l0x = ["with_hal", "vl53l0x"]
with_math = ["nalgebra", "libm", "rand"]
# --all-features will include "generic", but you can't build "mini"
# if device crate is used.
all = ["with_dcmimu", "with_lsm"]

[[bin]]
name = "mini"
path = "mini/main.rs"
required-features = ["no_device"]

[[bin]]
name = "pwm"
path = "pwm/main.rs"
required-features = ["with_device"]

[[bin]]
name = "better_pwm"
path = "better_pwm/main.rs"
required-features = ["with_hal"]

[[bin]]
name = "motors"
path = "motors/main.rs"
required-features = ["with_hal"]

[[bin]]
name = "tmtest"
path = "tmtest/main.rs"
required-features = ["with_hal"]

[[bin]]
name = "serial_echo"
path = "serial_echo/main.rs"
required-features = ["with_hal"]

[[bin]]
name = "vl53l0x"
path = "vl53l0x/main.rs"
required-features = ["with_vl53l0x"]

[[bin]]
name = "raw_sensors"
path = "raw_sensors/main.rs"
required-features = ["with_mpu"]

[[bin]]
name = "systick"
path = "systick/main.rs"
required-features = ["with_hal"]

[[bin]]
name = "therm"
path = "therm/main.rs"
required-features = ["with_mpu"]

[[bin]]
name = "mpu_calib"
path = "mpu_calib/main.rs"
required-features = ["with_mpu"]

[[bin]]
name = "bmp280"
path = "bmp280/main.rs"
required-features = ["with_bmp"]

[[bin]]
name = "ahrs"
path = "ahrs/main.rs"
required-features = ["with_dcmimu"]

[[bin]]
name = "lsm303"
path = "lsm303/main.rs"
required-features = ["with_lsm"]

[[bin]]
name = "lsm_mpu"
path = "lsm_mpu/main.rs"
required-features = ["with_lsm", "with_mpu"]

[[bin]]
name = "shared_i2c"
path = "shared_i2c/main.rs"
required-features = ["with_shared_bus", "with_lsm", "with_bmp"]

[[bin]]
name = "altitude"
path = "altitude/main.rs"
required-features = ["with_math"]
