[package]
name = "better_pwm"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]

[dependencies]

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = false
codegen-units = 1
incremental = false

[dependencies.panic-abort]
version = "0.2.0"

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.stm32f30x]
version = "0.7.0"
features = ["rt"]

[dependencies.cortex-m-rt]
version = "0.5.1"

[dependencies.stm32f30x-hal]
git = "https://github.com/copterust/stm32f30x-hal.git"
rev = "624bfcae3341091b88bc555c14ff8f149ea606da"
# path = "../../stm32f30x-hal"
