cargo-features = ["edition", "rename-dependency"]

[package]
name = "mini"
version = "0.1.0"
authors = ["Roma Sokolov"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = false
codegen-units = 1
incremental = false

[dependencies]
panic-abort = "0.2.0"
cortex-m = "0.5.2"

[dependencies.rt]
version = "0.5.1"
package = "cortex-m-rt"
