cargo-features = ["edition", "rename-dependency"]

[package]
name = "raw_sensors"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = 0
lto = false
codegen-units = 1
incremental = false

[dependencies]
panic-abort = "0.2.0"
nb = "0.1.1"
cortex-m = "0.5.2"
stm32f30x = {version = "0.7.0", features = ["rt"]}

[dependencies.rt]
version = "0.5.1"
package = "cortex-m-rt"

[dependencies.ehal]
features = ["unproven"]
version = "0.2.1"
package = "embedded-hal"

[dependencies.hal]
version = "0.5.3"
package = "alt-stm32f30x-hal"

[dependencies.mpu9250]
git = "https://github.com/copterust/mpu9250.git"
rev = "c62440ea439816e58ee0987d8089e6a82d4633f6"
