[package]
name = "tmtest"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]

[dependencies]

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = false
codegen-units = 1
incremental = false

[dependencies.nb]
version = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.panic-abort]
version = "0.2.0"

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.stm32f30x]
version = "0.7.0"
features = ["rt"]

[dependencies.cortex-m-rt]
version = "0.5.1"

[dependencies.alt-stm32f30x-hal]
# version = "0.3.0"
path = "../../alt-stm32f30x-hal"
